# rl-statsapi-listener

./: .gitignore  README.md  listen.py  obs_rl_statsapi.py  package-lock.json  package.json  playwright.config.js  pyproject.toml
.codex-session-notes/: codex-taskchat-20260430T044200Z-96fc750d-c8c5-41c2-965e-07f62d64c7a6-session-notes.md  codex-taskchat-20260502T183500Z-095f40dc-25b4-41dc-9985-00291e615245-session-notes.md  codex-taskchat-20260503T030101Z-305623c3-bb6a-4ac7-827f-b60945c1d788-session-notes.md  codex-taskchat-20260505T025615Z-8af2ebe4-45e2-4cbd-9450-895e17cb8ee6-session-notes.md  codex-taskchat-20260507T002439Z-03000a21-0e5a-4179-ae77-01864151c05f-session-notes.md  codex-taskchat-20260508T001943Z-9f5e4f75-fe10-44b7-b305-2324e4e7c7db-session-notes.md  codex-taskchat-20260509T000406Z-01b06679-3f28-4a89-8634-74b1431ffc29-session-notes.md  codex-taskchat-20260509T001522Z-28dfa46d-aebd-4bb9-9ef1-f52332bca4d7-session-notes.md  codex-taskchat-20260509T040125Z-repo-organization-session-notes.md  codex-taskchat-20260509T042039Z-repo-organization-progress-session-notes.md  codex-taskchat-20260509T055842Z-data-contracts-session-notes.md  codex-taskchat-20260509T060946Z-architecture-integration-docs-session-notes.md  codex-taskchat-20260509T061501Z-entry-point-wrapper-audit-session-notes.md  codex-taskchat-20260509T062448Z-obscounter-reference-pruning-session-notes.md  codex-taskchat-20260509T064033Z-repo-hygiene-automation-session-notes.md  codex-taskchat-20260509T073115Z-aborted-match-loss-guard-session-notes.md
docs/: architecture.md  data-contracts.md  (+3 more)
(+37 files in other folders)
